--- a/pro/guides/sheet/features/print.zh-CN.mdx
+++ b/pro/guides/sheet/features/print.zh-CN.mdx
@@ -24,7 +24,7 @@ import { Tabs } from 'nextra/components'
 ```typescript
 import '@univerjs-pro/sheets-print/lib/index.css';
 
-import { SheetsPrintPlugin } from '@univerjs-pro/sheets-print'
+import { UniverSheetsPrintPlugin } from '@univerjs-pro/sheets-print'
 ```
 
 ## 国际化
@@ -47,5 +47,5 @@ const univer = new Univer({
 ## 注册
 
 ```typescript
-univer.registerPlugin(SheetsPrintPluginZhCN);
+univer.registerPlugin(UniverSheetsPrintPlugin);
 ```
