--- a/pro/guides/sheet/deployment/docker.zh-CN.mdx
+++ b/pro/guides/sheet/deployment/docker.zh-CN.mdx
@@ -14,34 +14,13 @@
 
 PostgreSQL + RabbitMQ
 
-## 部署
+## 快速部署
 
 系统环境：Linux、Mac、Windows(WSL/Git Bash)
 
-1. 下载对应[版本](https://github.com/dream-num/helm-charts/releases)
-
-或点击[此处](https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/docker-compose.zip)下载。
-
-2. 解压后进入 `docker-compose` 目录。
-
-```bash
-cd helm-charts/docker-compose
+下载 [license.zip](https://www.univer.ai/pro/license) 后，在同个目录下执行
 ```
-
-3. 配置许可文件 （可选），将您的 [Pro License](/pro/license) 文件放到 `docker-compose/configs` 目录下。
-
-4. 启动后端服务。
-
-```bash
-bash run.sh
-```
-
-5. 验证服务
-
-验证文档服务是否启动成功。
-
-```bash
-docker run --net=univer-prod --rm --name univer-collaboration-lite -p 3010:3010 univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-lite:latest
+sh -c "$(curl -fsSL https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/install.sh)"
 ```
 
 打开浏览器输入 http://localhost:3010 后会自动创建空白文档并跳转到新文档链接（不支持IE浏览器）。
