docs: add umd desc

--- a/pro/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/pro/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -45,3 +45,7 @@ Once the server is up, you can create a new Univer Pro front-end application fro
 </Tabs>
 
 You've now successfully set up your first Univer Pro project! Visit [http://localhost:5173/](http://localhost:5173/) to explore some basic features of Univer Pro.
+
+P.S. You also can find the source code of the template at [dream-num/univer-pro-sheet-start-kit](https://github.com/dream-num/univer-pro-sheet-start-kit).
+
+The above method requires that Node.js and Git are installed on your device. If you have not installed them, you can also use by UMD. [Click here](/pro/guides/sheet/getting-started/umd) to view details.
