--- a/pro/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/pro/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -45,3 +45,7 @@ cd helm-charts/docker-compose && ./run.sh
 </Tabs>
 
 至此，你已经成功创建了属于你的第一个 Univer Pro 项目，您可以访问 [http://localhost:5173/](http://localhost:5173/) 体验 Univer Pro 的一些基本功能。
+
+同时，你也可以在 [dream-num/univer-pro-sheet-start-kit](https://github.com/dream-num/univer-pro-sheet-start-kit) 找到该模板的源代码。
+
+上面方式要求你设备上安装了 Node.js 和 Git ， 如果你没有安装， 你还可以通过 UMD 方式使用Univer Pro ，[点击这里](/pro/guides/sheet/getting-started/umd)查看详情。
