--- a/pro/guides/sheet/getting-started/umd.en-US.mdx
+++ b/pro/guides/sheet/getting-started/umd.en-US.mdx
@@ -2,7 +2,7 @@
 
 This is a UMD demo for easy use.
 
-Save it as an HTML file or deploy it to your server, and then open it in a browser to experience the features of Union Pro. Please note to replace the `UniverserEndpoint` with your Universer server address.
+Save it as an HTML file or deploy it to your server, and then open it in a browser to experience the features of collaboration, live share, print, exchange, etc. Please note to replace the `UniverserEndpoint` with your Universer server address.
 
 ```html
 <!DOCTYPE html>
