--- a/pro/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/pro/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -81,11 +81,11 @@ import { UniverSheetsPlugin } from "@univerjs/sheets";
 import { UniverSheetsFormulaPlugin } from "@univerjs/sheets-formula";
 import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
 
-+ import { CollaborationPlugin } from '@univerjs-pro/collaboration';
-+ import { CollaborationClientPlugin } from '@univerjs-pro/collaboration-client';
-+ import { LiveSharePlugin } from '@univerjs-pro/live-share';
++ import { UniverCollaborationPlugin } from '@univerjs-pro/collaboration';
++ import { UniverCollaborationClientPlugin } from '@univerjs-pro/collaboration-client';
++ import { UniverLiveSharePlugin } from '@univerjs-pro/live-share';
 + import { UniverSheetsConditionalFormattingUIPlugin } from '@univerjs/sheets-conditional-formatting-ui';
-+ import { SheetsPrintPlugin } from '@univerjs-pro/sheets-print';
++ import { UniverSheetsPrintPlugin } from '@univerjs-pro/sheets-print';
 + import { UniverSheetsExchangeClientPlugin } from '@univerjs-pro/sheets-exchange-client';
 ```
 
@@ -117,12 +117,12 @@ univer.registerPlugin(UniverSheetsUIPlugin);
 univer.registerPlugin(UniverSheetsFormulaPlugin);
 
 + // collaboration plugins
-+ univer.registerPlugin(CollaborationPlugin);
-+ univer.registerPlugin(CollaborationClientPlugin);
-+ univer.registerPlugin(LiveSharePlugin);
++ univer.registerPlugin(UniverCollaborationPlugin);
++ univer.registerPlugin(UniverCollaborationClientPlugin);
++ univer.registerPlugin(UniverLiveSharePlugin);
 
 + // print
-+ univer.registerPlugin(SheetsPrintPlugin);
++ univer.registerPlugin(UniverSheetsPrintPlugin);
 + // exchange
 + univer.registerPlugin(UniverSheetsExchangeClientPlugin);
 ```
