docs: updaste roadmap

--- a/src/docs/guides/doc/roadmap.en-US.mdx
+++ b/src/docs/guides/doc/roadmap.en-US.mdx
@@ -16,37 +16,32 @@ export const data = [
   {
     start: '2024/01',
     end: '2024/03',
-    name: 'Main Features',
+    name: '✅ Main Features',
   },
   {
     start: '2024/02',
     end: '2024/03',
-    name: 'Collaboration',
+    name: '✅ Collaboration',
   },
   {
-    start: '2024/04',
-    end: '2024/05',
-    name: 'Hyperlinks',
+    start: '2024/07',
+    end: '2024/09',
+    name: '🏃 Hyperlinks',
   },
   {
-    start: '2024/04',
-    end: '2024/05',
-    name: 'Clear formatting',
+    start: '2024/07',
+    end: '2024/09',
+    name: '🏃 Clear formatting',
   },
   {
-    start: '2024/04',
-    end: '2024/05',
-    name: 'Format Painter',
+    start: '2024/07',
+    end: '2024/09',
+    name: '🏃 Format Painter',
   },
   {
-    start: '2024/04',
-    end: '2024/05',
-    name: 'Checklists',
-  },
-  {
-    start: '2024/05',
-    end: '2024/12',
-    name: 'Other Features',
+    start: '2024/06',
+    end: '2024/07',
+    name: '🏃 Floating Images',
   }
 ]
 
