--- a/src/docs/guides/doc/roadmap.zh-CN.mdx
+++ b/src/docs/guides/doc/roadmap.zh-CN.mdx
@@ -16,37 +16,32 @@ export const data = [
   {
     start: '2024/01',
     end: '2024/04',
-    name: '核心功能',
+    name: '✅ 核心功能',
   },
   {
     start: '2024/02',
     end: '2024/03',
-    name: '多人协同',
+    name: '✅ 多人协同',
   },
   {
-    start: '2024/04',
-    end: '2024/05',
-    name: '超链接',
+    start: '2024/07',
+    end: '2024/09',
+    name: '🏃 超链接',
   },
   {
-    start: '2024/04',
-    end: '2024/05',
-    name: '清除格式',
+    start: '2024/07',
+    end: '2024/09',
+    name: '🏃 清除格式',
   },
   {
-    start: '2024/04',
-    end: '2024/05',
-    name: '格式刷',
+    start: '2024/07',
+    end: '2024/09',
+    name: '🏃 格式刷',
   },
   {
-    start: '2024/04',
-    end: '2024/05',
-    name: '任务列表',
-  },
-  {
-    start: '2024/05',
-    end: '2024/12',
-    name: '其他功能',
+    start: '2024/06',
+    end: '2024/07',
+    name: '🏃 浮动图片',
   }
 ]
 
