--- a/src/docs/guides/sheet/roadmap.en-US.mdx
+++ b/src/docs/guides/sheet/roadmap.en-US.mdx
@@ -41,7 +41,7 @@ export const data = [
   {
     start: '2024/04',
     end: '2024/06',
-    name: '🏃‍♀️ Sheet Permissions',
+    name: '✅ Sheet Permissions',
   },
   {
     start: '2024/03',
@@ -51,17 +51,17 @@ export const data = [
   {
     start: '2024/04',
     end: '2024/05',
-    name: '🏃‍♀️ Comments',
+    name: '✅ Comments',
   },
   {
     start: '2024/01',
-    end: '2024/06',
+    end: '2024/09',
     name: '🏃‍♀️ More Formulas',
   },
   {
     start: '2024/05',
     end: '2024/06',
-    name: '🏃‍♀️ Sorting',
+    name: '✅🏃‍♀️ Sorting',
   },
   {
     start: '2024/01',
