--- a/src/docs/guides/sheet/roadmap.zh-CN.mdx
+++ b/src/docs/guides/sheet/roadmap.zh-CN.mdx
@@ -41,7 +41,7 @@ export const data = [
   {
     start: '2024/04',
     end: '2024/06',
-    name: '🏃 保护区域（子表和范围权限控制）',
+    name: '✅ 保护区域（子表和范围权限控制）',
   },
   {
     start: '2024/03',
@@ -51,17 +51,17 @@ export const data = [
   {
     start: '2024/04',
     end: '2024/05',
-    name: '🏃 批注',
+    name: '✅ 批注',
   },
   {
     start: '2024/01',
-    end: '2024/06',
+    end: '2024/09',
     name: '🏃 更多的公式',
   },
   {
     start: '2024/05',
     end: '2024/06',
-    name: '🏃 排序',
+    name: '✅ 排序',
   },
   {
     start: '2024/01',
