--- a/src/docs/guides/slide/roadmap.en-US.mdx
+++ b/src/docs/guides/slide/roadmap.en-US.mdx
@@ -16,12 +16,12 @@ export const data = [
   {
     start: '2024/09',
     end: '2025/03',
-    name: 'Main Features',
+    name: '🏃 Main Features',
   },
   {
     start: '2025/03',
     end: '2025/12',
-    name: 'Other Features',
+    name: '🏃 Other Features',
   }
 ]
 
