--- a/src/docs/guides/slide/roadmap.zh-CN.mdx
+++ b/src/docs/guides/slide/roadmap.zh-CN.mdx
@@ -16,12 +16,12 @@ export const data = [
   {
     start: '2024/09',
     end: '2025/03',
-    name: '核心功能',
+    name: '🏃 核心功能',
   },
   {
     start: '2025/03',
     end: '2025/12',
-    name: '其他功能',
+    name: '🏃 其他功能',
   }
 ]
 
