--- a/src/docs/guides/general/troubleshooting.en-US.mdx
+++ b/src/docs/guides/general/troubleshooting.en-US.mdx
@@ -20,7 +20,7 @@ We have provided an [online demo](/playground?title=Webpack%204) based on webpac
 
 ### Why do I get an error outputting that `Could not resolve dependencies` when I use npm or yarn to install?
 
-This may be because the version of the node package manager you are using is too low. yarn@1 and npm@6 will not automatically install peerDependencies in packages.json. For more details, see  [package-json#peerdependencies](https://docs.npmjs.com/cli/v10/configuring-npm/package-json#peerdependencies).
+This may be because the version of the node package manager you are using is too low. yarn and npm@6 will not automatically install peerDependencies in packages.json. For more details, see  [package-json#peerdependencies](https://docs.npmjs.com/cli/v10/configuring-npm/package-json#peerdependencies).
 
 - You can manually install the missing peer dependencies.
 - For npm users, you can upgrade your node version to 16 or above, or upgrade your npm version to 7 or above. Be aware that the upgrade behavior may affect your existing projects.
@@ -36,3 +36,23 @@ Firefox does not yet support `clipboard.readText()`, as mentioned in the [MDN do
 In browsers such as Chrome and Safari that support `clipboard.readText()`, Univer will attempt to directly access the clipboard content. Please make sure that the user performing the operation has granted Univer browser clipboard permissions.
 
 ![Authorize Clipboard](./troubleshooting/clipboard-en.png)
+
+## Errors
+
+### Error: Locale not initialized
+
+```
+Error: Locale not initialized
+```
+
+This error occurs because you have not initialized the locales when using Univer. You need to initialize the locales as follows:
+
+```typescript {3-6}
+const univer = new Univer({
+  theme: defaultTheme,
+  locale: LocaleType.EN_US,
+  locales: {
+      [LocaleType.EN_US]: enUS,
+  },
+});
+```
