--- a/src/docs/guides/general/troubleshooting.en-US.mdx
+++ b/src/docs/guides/general/troubleshooting.en-US.mdx
@@ -1,4 +1,7 @@
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import Image from '@/components/Image'
+import clipboardImg from './troubleshooting/clipboard-en.png'
+import missingLocaleImg from './troubleshooting/missing-locale.png'
 
 # Troubleshooting
 
@@ -35,9 +38,35 @@ Firefox does not yet support `clipboard.readText()`, as mentioned in the [MDN do
 
 In browsers such as Chrome and Safari that support `clipboard.readText()`, Univer will attempt to directly access the clipboard content. Please make sure that the user performing the operation has granted Univer browser clipboard permissions.
 
-![Authorize Clipboard](./troubleshooting/clipboard-en.png)
+<Image src={clipboardImg} alt="Authorize Clipboard" width={500} />
+
+## Development Related
+
+### Why are the menu items not displayed in the correct language?
+
+This is because you have missed the corresponding locales. You need to pass the corresponding locales when initializing Univer. For more details, please refer to the documentation on the internationalization of each feature.
+
+<Image src={missingLocaleImg} alt="Missing Locale" width={300} />
 
 ## Errors
+
+### Error: [ThemeService]: current theme is not set!
+
+```
+Error: [ThemeService]: current theme is not set!
+```
+
+This error occurs because you have not set the theme when using Univer. You need to set the theme as follows:
+
+```typescript {2}
+const univer = new Univer({
+  theme: defaultTheme,
+  locale: LocaleType.ZH_CN,
+  locales: {
+      [LocaleType.ZH_CN]: zhCN,
+  },
+});
+```
 
 ### Error: Locale not initialized
 
