--- a/src/docs/guides/general/troubleshooting.zh-CN.mdx
+++ b/src/docs/guides/general/troubleshooting.zh-CN.mdx
@@ -1,4 +1,7 @@
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import Image from '@/components/Image'
+import clipboardImg from './troubleshooting/clipboard.png'
+import missingLocaleImg from './troubleshooting/missing-locale.png'
 
 # 常见问题
 
@@ -42,9 +45,35 @@ Firefox 尚不支持 `clipboard.readText()`，详见 [MDN](https://developer.moz
 
 在 Chrome 和 Safari 等支持 `clipboard.readText()` 的浏览器中，Univer 会直接尝试获取剪贴板内容，请确保操作的用户授予了 Univer 浏览器的剪贴板权限。
 
-![Authorize Clipboard](./troubleshooting/clipboard.png)
+<Image src={clipboardImg} alt="Authorize Clipboard" width={500} />
+
+## 开发相关
+
+### 为什么我的菜单项中没有显示正确的语言？
+
+这是因为你遗漏了对应的语言包，你需要在初始化 Univer 时传入对应的语言包，详情请参考各个功能项中国际化相关的文档。
+
+<Image src={missingLocaleImg} alt="Missing Locale" width={300} />
 
 ## 故障排查
+
+### Error: [ThemeService]: current theme is not set!
+
+```
+Error: [ThemeService]: current theme is not set!
+```
+
+出现该错误的原因是因为你在使用 Univer 时没有设置主题。你需要通过以下方式来设置主题：
+
+```typescript {2}
+const univer = new Univer({
+  theme: defaultTheme,
+  locale: LocaleType.ZH_CN,
+  locales: {
+      [LocaleType.ZH_CN]: zhCN,
+  },
+});
+```
 
 ### Error: Locale not initialized
 
