--- a/src/docs/guides/general/server/docker.en-US.mdx
+++ b/src/docs/guides/general/server/docker.en-US.mdx
@@ -22,16 +22,12 @@ Our architecture is built on PostgreSQL and RabbitMQ.
 
 Compatible with Linux, Mac, and Windows/WSL environments.
 
-After download [license.zip](https://www.univer.ai/pro/license), under same folder run
+After going [this](https://www.univer.ai/pro/license) download license.zip, then run
 ```
 sh -c "$(curl -fsSL https://raw.githubusercontent.com/dream-num/helm-charts/main/install.sh)"
 ```
 
 Confirm that the document service has successfully started.
-
-```bash
-docker run --net=univer-prod --rm --name univer-collaboration-lite -p 3010:3010 univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-lite:latest
-```
 
 Access http://localhost:3010 in your web browser to create a new blank document, which will then redirect you to the document link (Internet Explorer is not supported).
 
