fix: fix github links

--- a/src/docs/guides/doc/features/core.en-US.mdx
+++ b/src/docs/guides/doc/features/core.en-US.mdx
@@ -1,5 +1,6 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import VersionBadge from '@/components/VersionBadge'
 
 # Core Features
 
@@ -121,5 +122,6 @@ univer.registerPlugin(UniverUIPlugin, {
 
 * `container` - Container element, can be a string or DOM element.
 * `header` - Whether to display the header.
+* `toolbar` - Whether to display the header toolbar. <VersionBadge version="0.1.18+" />
 * `footer` - Whether to display the footer.
 * `contextMenu` - Whether to display the right-click menu.
