--- a/src/docs/guides/general/troubleshooting.en-US.mdx
+++ b/src/docs/guides/general/troubleshooting.en-US.mdx
@@ -107,10 +107,10 @@ const univer = new Univer({
 });
 ```
 
-### Error: Locale not initialized
+### Error: [LocaleService]: Locale not initialized
 
 ```
-Error: Locale not initialized
+Error: [LocaleService]: Locale not initialized
 ```
 
 This error occurs because you have not initialized the locales when using Univer. You need to initialize the locales as follows:
