--- a/src/docs/guides/general/troubleshooting.zh-CN.mdx
+++ b/src/docs/guides/general/troubleshooting.zh-CN.mdx
@@ -114,10 +114,10 @@ const univer = new Univer({
 });
 ```
 
-### Error: Locale not initialized
+### Error: [LocaleService]: Locale not initialized
 
 ```
-Error: Locale not initialized
+Error: [LocaleService]: Locale not initialized
 ```
 
 出现该错误的原因是因为你在使用 Univer 时没有初始化语言环境。你需要通过以下方式来初始化语言环境：
