--- a/src/docs/guides/sheet/features/conditional-formatting.en-US.mdx
+++ b/src/docs/guides/sheet/features/conditional-formatting.en-US.mdx
@@ -5,6 +5,8 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
+Conditional formatting is a feature that sets rules in cells to automatically set cell formats based on the value of the data.
+
 ## Installation
 
 <Tabs items={['pnpm', 'npm']}>
