--- a/src/docs/guides/sheet/features/conditional-formatting.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/conditional-formatting.zh-CN.mdx
@@ -5,6 +5,8 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
+条件格式是一种在单元格中设置规则，以根据数据的值自动设置单元格格式的功能。
+
 ## 安装
 
 <Tabs items={['pnpm', 'npm']}>
