--- a/src/docs/guides/sheet/features/data-validation.en-US.mdx
+++ b/src/docs/guides/sheet/features/data-validation.en-US.mdx
@@ -5,6 +5,8 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
+Data validation is a feature that sets rules in cells to ensure that the data entered by users meets specific conditions.
+
 ## Installation
 
 <Tabs items={['pnpm', 'npm']}>
