--- a/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
@@ -5,6 +5,8 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
+数据验证是一种在单元格中设置规则，以确保用户输入的数据符合特定条件的功能。
+
 ## 安装
 
 <Tabs items={['pnpm', 'npm']}>
