--- a/src/docs/guides/doc/features/core.zh-CN.mdx
+++ b/src/docs/guides/doc/features/core.zh-CN.mdx
@@ -1,5 +1,6 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import VersionBadge from '@/components/VersionBadge'
 
 # 核心功能
 
@@ -119,5 +120,6 @@ univer.registerPlugin(UniverUIPlugin, {
 
 * `container` - 容器元素，可以是字符串或者 DOM 元素。
 * `header` - 是否显示头部。
+* `toolbar` - 是否显示头部工具栏。 <VersionBadge version="0.1.18+" />
 * `footer` - 是否显示底部。
 * `contextMenu` - 是否显示右键菜单。
