--- a/src/docs/guides/general/advanced/custom-ui.zh-CN.mdx
+++ b/src/docs/guides/general/advanced/custom-ui.zh-CN.mdx
@@ -238,16 +238,20 @@ export function CustomMenuItemDropdownListFirstItemFactory(): IMenuButtonItem<st
 
 ## 定制菜单项（隐藏菜单项）
 
-在 Univer 中定制或隐藏菜单项是一种常见需求，我们为所有包含了菜单项的插件提供了配置项，你可以非常轻松地通过配置项来实现这一需求。
+在 Univer 中定制或隐藏菜单项是一种常见需求，我们为所有包含了菜单项的插件提供了配置项。只要知道菜单项对应的命令 ID，你就可以非常轻松地通过配置项来实现这一需求。
 
 例如，隐藏加粗的菜单项：
 
 ```typescript
+import { UniverSheetsUIPlugin, SetRangeBoldCommand } from '@univerjs/sheets-ui';
+
 univer.registerPlugin(UniverSheetsUIPlugin, {
   menu: {
-    'sheet.command.set-range-bold': {
+    [SetRangeBoldCommand.id]: {
       hidden: true,
     },
   },
 });
 ```
+
+关于如何获取命令 ID，可以参考教程[如何查找命令 ID](/guides/sheet/tutorials/find-the-command-id)。
