docs: update docs

--- a/src/docs/guides/general/tutorials/find-the-command-id.zh-CN.mdx
+++ b/src/docs/guides/general/tutorials/find-the-command-id.zh-CN.mdx
@@ -11,7 +11,7 @@ import VersionBadge from '@/components/VersionBadge'
 
 Univer 导出了所有的命令，你可以在 [API Reference](/typedoc/@univerjs/README) 中找到目标命令，并从对应的包中导入，即可获取到命令的 ID。
 
-列如，你想要查找设置选区下划线的命令 ID，首先可以在 [API Reference - Variable: SetRangeUnderlineCommand](/typedoc/@univerjs/sheets-ui/variables/SetRangeUnderlineCommand) 中找到。然后就可以这样导入并获取命令 ID：
+例如，你想要查找设置选区下划线的命令 ID，首先可以在 [API Reference - Variable: SetRangeUnderlineCommand](/typedoc/@univerjs/sheets-ui/variables/SetRangeUnderlineCommand) 中找到。然后就可以这样导入并获取命令 ID：
 
 ```typescript
 import { SetRangeUnderlineCommand } from '@univerjs/sheets-ui';
